ml-models/v4/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: streamlit-cow-v1
  namespace: ml-model
spec:
  to:
    kind: Service
    name: streamlit-cow-v1
    weight: 100
  port:
    targetPort: 2085
  wildcardPolicy: None
